syntax = "proto3";

package neurun;

option go_package = "github.com/luis12loureiro/neurun/api/gen/neurun";

import "google/protobuf/duration.proto";

enum TaskType {
  UNSPECIFIED = 0;
  LOG = 1;
  HTTP = 2;
}

enum TaskStatus {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_RUNNING = 2;
  STATUS_COMPLETED = 3;
  STATUS_FAILED = 4;
}

message CreateTaskRequest {
  string name = 1;
  TaskType type = 2;
  uint32 retries = 3;
  google.protobuf.Duration retryDelay = 4;
  optional string condition = 5;
  oneof payload {
    LogPayload logPayload = 6;
    HTTPPayload httpPayload = 7;
  }
  repeated CreateTaskRequest next = 8;
}

message Task {
  optional string id = 1;
  string name = 2;
  TaskType type = 3;
  TaskStatus status = 4;
  uint32 retries = 5;
  google.protobuf.Duration retryDelay = 6;
  optional string condition = 7;
  oneof payload {
    LogPayload logPayload = 8;
    HTTPPayload httpPayload = 9;
  }
  repeated Task next = 10;
}

message LogPayload {
  string message = 1;
}

message HTTPPayload {
  string url = 1;
  string method = 2;
  string body = 3;
  map<string, string> headers = 4;
  //HTTPAuth auth = 5;
}


